Start page: static positioning removed, flex layout used. Header whitespace problem resolved

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,4 +1,4 @@
-.container{
-  margin: auto;
-  color: white
+* {
+  padding: 0;
+  margin: 0;
 }
