--- a/frontend/src/app/start/log-in/log-in.component.css
+++ b/frontend/src/app/start/log-in/log-in.component.css
@@ -8,58 +8,58 @@
   font-family: montserratFont;
 }
 
-html, body {
-  margin: 0;
-  align-items: center;
-  background-color: #ffffff;
-  font-weight: normal;
-}
-
-.square2 {
+.container {
   background-color: #ffd700;
   padding: 30px;
-  height: 580px;
   max-width: 350px;
-  margin-top: 150px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 50px;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+}
+
+form > * {
+  width: 100%;
+  margin-top: 10px;
+  font-weight: bold;
+  border-radius: 10px;
 }
 
 #login_text {
+  font-size: 30px;
   text-align: center;
-  font-size: xx-large;
-  color: white;
-  font-weight: bold;
+  color: #ffffff;
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"] {
   color: black;
-  width: 325px;
-  padding: 10px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  padding-left: 10px;
+  height: 35px;
   margin-bottom: 10px;
-  margin-top: 10px;
-  border-radius: 10px;
   border: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 input[type="submit"] {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   color: #FFE100;
   border: none;
-  padding: 10px;
-  width: 325px;
-  font-weight: bold;
-  margin: 10px;
-  border-radius: 10px;
+  height: 40px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 form label {
   color: #ffffff;
-  font-weight: bold;
 }
 
 form a {
@@ -69,12 +69,8 @@ form a {
 }
 
 #sing_up_text {
-  color: white;
+  color: #ffffff;
   cursor: pointer;
-}
-
-#or {
-  margin-left: 164px;
 }
 
 input[type="submit"]:hover {
@@ -89,9 +85,27 @@ input[type="submit"]:hover {
   cursor: pointer;
 }
 
-#password_invalid,
-#email_invalid {
-  margin-left: 20px;
+#password_invalid {
   color: darkred;
   font-size: small;
+}
+
+@media screen and (max-width: 500px) {
+  * {
+    overflow: hidden;
+    position: static;
+  }
+
+  .container {
+    background-color: #ffd700;
+    padding: 30px;
+    max-width: 90%;
+    margin-top: 50px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
 }
